samples/_failures_safe/1761513006_ef7186_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5402385e.c: In function ‘main’:
./samples/SAFE/__tmp_5402385e.c:145:5: error: expected declaration or statement at end of input
  145 |     }
      |     ^
